<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omuni_example</name>
  <version>0.0.0</version>
  <description>
    This is a minimal example package for omuni wheels. 
    I am glad if you can make a new package by referring to this package.
  </description>
  <maintainer email="tamanisikaminai@gmail.com">yamada</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>can_plugins2</depend>
  <depend>sensor_msgs</depend>
  <depend>joy</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
